# rgs-interface

./: README.md  check_data.ipynb  data_interface.py  pyproject.toml  rgs_app.csv
scripts/: run_query.py  test_data.py
src/recsys_interface/: __init__.py  cli.py  config.py  db.py
src/recsys_interface/data/: interface.py  preprocess.py
src/recsys_interface/sql/: query.sql  query_all.sql  query_timeseries.sql
src/recsys_interface/visualization/: generate_plots.py
src/rgs_interface/: cli.py  config.py  db.py
src/rgs_interface/data/: interface.py  schemas.py
src/rgs_interface/sql/: query.sql  query__.sql  query_dm.sql  query_emotional.sql  query_old.sql  query_patient.sql  query_pe.sql
src/rgs_interface/visualization/: generate_plots.py
