[tool.poetry]
name = "recsys-interface"
version = "0.1.0"
description = "Fetch data from Eodyne production database"
authors = ["Eodyne Systems"]
readme = "README.md"
packages = [{ include = "recsys_interface", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "2.0.35"
pandas = "2.2.3"
numpy = "1.26.4"
seaborn = "0.13.2"
matplotlib = "3.8.3"
scikit-learn = "^1.6.1"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
argparse = "^1.4.0"

[tool.poetry.scripts]
fetch-rgs = "recsys_interface.cli:main"  # Adds a CLI command

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
