[project]
name = "rgs-interface"
version = "0.3.1"
description = "Fetch data from Eodyne production database"
authors = [
    {name = "Eodyne Systems SL"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas[parquet]>=2.2.3,<3.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "matplotlib>=3.8.3,<4.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "typer (>=0.16.0,<0.17.0)"
]
packages = [{ include = "rgs_interface", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rgs-cli = "rgs_interface.cli:app"  # Adds a CLI command
